--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-{
+* {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -117,84 +117,101 @@ img {
 }
 
 /* GRID */
-.container{
-    max-width: 120rem;
-    margin:0 auto;
-    padding: 1.5rem;
+.container {
+  max-width: 120rem;
+  margin: 0 auto;
+  padding: 1.5rem;
 }
 
 /* header */
-.header{
-    background:#2b2b2b;
+.header {
+  background: #2b2b2b;
+  position: fixed;
+  width: 100%;
 }
-.header .branding h3{
-    color:#ffffff;
-    font-size: 2.5rem;
-    font-weight: 600;
+.header .branding h3 {
+  color: #ffffff;
+  font-size: 2.5rem;
+  font-weight: 600;
 }
-header .branding h3 span{
-    color:#ffa700;
+header .branding h3 span {
+  color: #ffa700;
 }
-.header .branding{
-display:flex;
-align-items: center;
-gap: 2rem;
+.header .branding {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
 }
-.header .header__nav ul li a{
-    color:#ffffff;
-    font-size: 1.8rem;
+.header .header__nav ul li a {
+  color: #ffffff;
+  font-size: 1.8rem;
 }
-.header .header__nav ul{
-    display:flex;
-    align-items:center;
-    gap:2.5rem;
+.header .header__nav ul {
+  display: flex;
+  align-items: center;
+  gap: 2.5rem;
 }
-header .header__nav ul li:hover a{
-    color:#ffa700;
+header .header__nav ul li:hover a {
+  color: #ffa700;
 }
-header .header__nav ul li:hover{
-    scale: 1.1;
-    transition: .5s ease;
+header .header__nav ul li:hover {
+  scale: 1.1;
+  transition: 0.5s ease;
 }
-.header .header__wrapper{
-    display:flex;
-    align-items: center;
-    justify-content: space-between;
+.header .header__wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
-.header .toggle__menu{
-  display:none;
+.header .toggle__menu {
+  display: none;
 }
-.header .toggle__menu span{
-width:3rem;
-height:.3rem;
-border-radius:5rem;
-background-color:#ffa700;
-display:block;
- transition:.5s ease;
+.header .toggle__menu span {
+  width: 3rem;
+  height: 0.3rem;
+  border-radius: 5rem;
+  background-color: #ffa700;
+  display: block;
+  transition: 0.5s ease;
 }
-.header .toggle__menu span:nth-child(2){
- margin:.5rem 0; 
+.header .toggle__menu span:nth-child(2) {
+  margin: 0.5rem 0;
 }
-.header .toggle__menu.open span:first-child{
+.header .toggle__menu.open span:first-child {
   transform: translateY(10px) rotate(225deg);
-  transition:.5s ease;
+  transition: 0.5s ease;
 }
-.header .toggle__menu.open span:nth-child(2){
-  opacity:0;
+.header .toggle__menu.open span:nth-child(2) {
+  opacity: 0;
 }
-.header .toggle__menu.open span:last-child{
+.header .toggle__menu.open span:last-child {
   transform: translateY(-7px) rotate(-225deg);
-  transition:.5s ease;
+  transition: 0.5s ease;
+}
+.header .header__nav.open {
+  right: 0rem;
+  transition: 0.5s ease;
 }
 /* header mobile view */
-@media screen and (max-width:500px){
-  .header .header__nav{
-    display:none;
+@media screen and (max-width: 500px) {
+  .header .header__nav {
+    background: #2b2b2b;
+    position: absolute;
+    right: -100rem;
+    top: 8rem;
+    width: 100%;
+    height: 100vh;
+    padding-top: 10rem;
+    transition: 0.5s ease;
   }
-  .header .branding img{
-    width:5rem;
+  .header .header__nav ul {
+    display: flex;
+    flex-direction: column;
   }
-  .header .toggle__menu{
-  display:block;
-}
+  .header .branding img {
+    width: 5rem;
+  }
+  .header .toggle__menu {
+    display: block;
+  }
 }
