--- a/style.css
+++ b/style.css
@@ -363,9 +363,73 @@ margin-bottom: 8rem;
     width: 100%;
   }
 }
+ /* FREE */
+ .free {
+  background: #ffa700;
+  padding: 6rem ;
+ }
+ .free .free__wrapper {
+text-align: center;
+ }
+ .free .free__wrapper h3{
+  font-size: 3rem;
+  font-weight: 600;
+}
+.free .free__wrapper p{
+  margin-bottom: 4rem;
+  font-size: 2rem;
+}
+.free .free__wrapper a{
+ background-color:#2b2b2b;
+  display: inline-block;
+  padding:1.5rem;
+  color:#ffffff;
+  border-radius: 5rem;
+  font-size: 1rem;
+  font-weight: 600;
+  max-width: 10rem;
+}
 
+/* FOOTER SECTIOON*/
+  .footer {
+    background: #2b2b2b;
+    width: 100%;
+  }
+  .footer .footer__wrapper {
+    display: flex;
+    justify-content: space-between;
+  }
+  .footer .footer__social {
+    display: flex;
+    flex-direction: row;
+    padding: 2.5rem;
+    gap: 5rem;
+  }
+  .footer .footer__wrapper ul li a {
+    color: dimgray;
+    font-size: 2.5rem;
+  }
+  .footer .footer__wrapper ul {
+    display: flex;
+    gap: 1.25rem;
+  }
+  .footer p {
+    color: dimgray;
+    display: flex;
+    align-items: center;
+  }
 
-
+  @media screen (max-width:500px){
+    .footer .footer__wrapper{
+      display:flex
+      flex-direction: column;
+    }
+    .footer .footer__wrapper ul {
+      padding-top:1.5rem;
+    }
+  }
+    
+  
 
 
 
