--- a/style.css
+++ b/style.css
@@ -1,294 +1,339 @@
-* {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-*:before,
-*:after {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
+*   {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+  }
+  *:before,
+  *:after {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+  }
+  
+  html,
+  body,
+  div,
+  span,
+  applet,
+  object,
+  iframe,
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
+  p,
+  blockquote,
+  pre,
+  a,
+  abbr,
+  acronym,
+  address,
+  big,
+  cite,
+  code,
+  del,
+  dfn,
+  em,
+  font,
+  ins,
+  kbd,
+  q,
+  s,
+  samp,
+  small,
+  strike,
+  strong,
+  sub,
+  sup,
+  tt,
+  var,
+  dl,
+  dt,
+  dd,
+  ol,
+  ul,
+  li,
+  fieldset,
+  form,
+  label,
+  legend,
+  table,
+  caption,
+  tbody,
+  tfoot,
+  thead,
+  tr,
+  th,
+  td {
+    border: 0;
+    font-family: inherit;
+    font-size: 100%;
+    font-style: inherit;
+    font-weight: inherit;
+    margin: 0;
+    outline: 0;
+    padding: 0;
+    vertical-align: baseline;
+    scroll-behavior: smooth;
+    scroll-padding-top: 10rem;
+    list-style: none;
+  }
+  
+  html {
+    font-size: 62.5%;
+    height: 100%;
+  }
+  
+  body {
+    color: #2b2b2b;
+    font-family: "Poppins", sans-serif;
+    font-size: 1.6rem;
+    overflow-x: hidden;
+    line-height: 1.4;
+  }
+  
+  table {
+    border-collapse: collapse;
+    border-spacing: 0;
+  }
+  
+  article,
+  aside,
+  footer,
+  header,
+  nav,
+  section,
+  time {
+    display: block;
+  }
+  
+  a {
+    text-decoration: none;
+  }
+  img {
+    max-width: 100%;
+  }
 
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-font,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td {
-  border: 0;
-  font-family: inherit;
-  font-size: 100%;
-  font-style: inherit;
-  font-weight: inherit;
-  margin: 0;
-  outline: 0;
-  padding: 0;
-  vertical-align: baseline;
-  scroll-behavior: smooth;
-  scroll-padding-top: 10rem;
-  list-style: none;
-}
+  /* GRID */
+  .container{
+    max-width:120rem;
+    margin: 0 auto;
+    padding: 1.5rem;
+  }
 
-html {
-  font-size: 62.5%;
-  height: 100%;
-}
-
-body {
-  color: #2b2b2b;
-  font-family: "Poppins", sans-serif;
-  font-size: 1.6rem;
-  overflow-x: hidden;
-  line-height: 1.4;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-article,
-aside,
-footer,
-header,
-nav,
-section,
-time {
-  display: block;
-}
-
-a {
-  text-decoration: none;
-}
-img {
-  max-width: 100%;
-}
-
-/* GRID */
-.container {
-  max-width: 120rem;
-  margin: 0 auto;
-  padding: 1.5rem;
-}
-
-/* header */
-.header {
-  background: #2b2b2b;
-  position: fixed;
-  width: 100%;
+/* HEADER */
+.header{
+    background:#2b2b2b;
+    position: fixed;
+    width: 100%
 }
 .header .branding h3 {
-  color: #ffffff;
-  font-size: 2.5rem;
-  font-weight: 600;
+    color:#ffffff;
+    font-size:2.5rem;
+    font-weight: 600;
 }
-header .branding h3 span {
-  color: #ffa700;
+.header .branding h3 span{
+    color:#ffa700;
 }
-.header .branding {
-  display: flex;
-  align-items: center;
-  gap: 2rem;
+.header .branding{
+    display:flex;
+    align-items: center;
+    gap: 2rem;
 }
-.header .header__nav ul li a {
-  color: #ffffff;
-  font-size: 1.8rem;
+.header .header__nav ul li a{
+    color: #ffffff;
+    font-size: 1.8rem;
 }
-.header .header__nav ul {
-  display: flex;
-  align-items: center;
-  gap: 2.5rem;
+.header .header__nav ul{
+    display: flex;
+    align-items: center;
+    gap: 2.5rem;
 }
-header .header__nav ul li:hover a {
-  color: #ffa700;
+.header .header__nav ul li:hover a{
+    color:#ffa700;
 }
-header .header__nav ul li:hover {
-  scale: 1.1;
-  transition: 0.5s ease;
+.header .header__nav ul li:hover{
+    scale: 1.1;
+    transition: 0.5s ease;
 }
 .header .header__wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
-.header .toggle__menu {
-  display: none;
+.header .toggle__menu{
+  display:none;
 }
-.header .toggle__menu span {
-  width: 3rem;
-  height: 0.3rem;
-  border-radius: 5rem;
-  background-color: #ffa700;
-  display: block;
-  transition: 0.5s ease;
+.header .toggle__menu span{
+  width:3rem;
+  height:0.3rem;
+  border-radius:5rem;
+  background-color:#ffa700;
+  display:block; 
+  transition:0.5s ease;
 }
-.header .toggle__menu span:nth-child(2) {
-  margin: 0.5rem 0;
+.header .toggle__menu span:nth-child(2){
+  margin:0.5rem 0;
 }
-.header .toggle__menu.open span:first-child {
-  transform: translateY(10px) rotate(225deg);
-  transition: 0.5s ease;
+.header .toggle__menu.open span:first-child{
+  transform: translateY(8px) rotate(225deg);
+  transition:0.5s ease;
 }
-.header .toggle__menu.open span:nth-child(2) {
-  opacity: 0;
+.header .toggle__menu.open span:nth-child(2){
+  opacity:0;
 }
-.header .toggle__menu.open span:last-child {
-  transform: translateY(-7px) rotate(-225deg);
-  transition: 0.5s ease;
+.header .toggle__menu.open span:last-child{
+  transform: translateY(-8px) rotate(-225deg);
+  transition:0.5s ease;
 }
 .header .header__nav.open {
   right: 0rem;
   transition: 0.5s ease;
 }
-/* header mobile view */
-@media screen and (max-width: 500px) {
-  .header .header__nav {
-    background: #2b2b2b;
+/* HEADER MOBILE VIEW */
+@media screen and (max-width:500px) {
+  .header .header__nav{
+    background:#2b2b2b;
     position: absolute;
     right: -100rem;
     top: 8rem;
     width: 100%;
     height: 100vh;
     padding-top: 10rem;
-    transition: 0.5s ease;
   }
-  .header .header__nav ul {
+  .header .header__nav ul{
     display: flex;
     flex-direction: column;
+  
   }
-  .header .branding img {
-    width: 5rem;
+  .header .branding img{
+    width:5rem;
   }
-  .header .toggle__menu {
-    display: block;
+  .header .toggle__menu{
+    display:block;
   }
-}  
+}
 
-/* banner */
+/* BANNER */
 .banner{
   padding-top: 13rem;
   padding-bottom: 5rem;
   background:#ffffff;
 }
-.banner .banner__wrapper{
+.banner .banner__wrapper {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns:1fr 1fr;
   align-items:center;
-  gap: 5rem;
+  gap: 5rem
 }
 .banner .banner__text h1 {
   font-size: 10rem;
-  font-weight: 800;
+  font-weight:800;
   color:#ffa700;
-  line-height: 1;
+  line-height:1;
 }
-.banner .banner__text p{
+.banner .banner__text p {
   margin-top: 5rem;
   margin-bottom: 3rem;
   text-align: justify;
 }
-@media screen and (max-width: 500px) {
+.banner .banner__social {
+    display: flex;
+    flex-direction: row;
+    padding: 2.5rem;
+    gap: 5rem;
+    color: #ffa700
+}
+@media screen and (max-width:500px){
   .banner{
-    padding-left: 2rem;
-    padding-right: 2rem;
+    padding-left:2rem;
+    padding-right:2rem;
   }
   .banner .banner__wrapper {
-    display: grid;
+    display:grid;
     grid-template-columns: 1fr;
+    
   }
   .banner .banner__text{
     order: 2;
   }
-  .banner .banner__text h6{
+  .banner .banner__text h1{
     font-size: 3rem;
     text-align: center;
   }
-  .banner .banner__text a {
-    display:flex;
+  .banner .banner__text a{
+    display: flex;
     width: fit-content;
-    margin: 0 auto;
-
   }
-  .banner img {
+  .banner img{
     width: 20rem;
-    margin: 0 auto;
+    margin: 0 auto
+  }
+}
+/* ABOUTME */
+.aboutme .aboutme__wrapper{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  gap: 1rem;
+}
+.aboutme .aboutme__wrapper :nth-child(1){
+  order: 2;
+}
+.aboutme .aboutme__text h1{
+  font-size: 3rem;
+  font-weight:600;
+  color:#ffa700;
+  line-height: 5;
+}
+.aboutme .aboutme__text p {
+  margin-bottom: 3rem;
+  text-align: justify;
+}
+/* MobileView */
+@media screen and (max-width:500px){
+  .aboutme{
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+  .aboutme .aboutme__wrapper {
+    display:grid;
+    grid-template-columns: 1fr;
+  }
+  .aboutme .aboutme__text h1{
+    font-size: 27px;
+    text-align: center;
+  }
+  .aboutme img{
+    width: 20rem;
+    margin:  0 auto;
   }
 }
 
 /* SRVC */
-.srvc{
-  background: #2b2b2b;
+.srvc {
+  background-color: #2b2b2b;
   padding: 5rem 0;
 }
 .srvc .srvc__wrapper{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  gap: 5rem;
+  gap:8rem;
 }
-.srvc .srvc__card {
+.srvc .srvc__card{
   text-align: center;
 }
 .srvc .srvc__card i{
   color: #ffa700;
-  font:5rem;
+  font-size: 5rem;
 }
-.srvc .srvc__card h4 {
+.srvc .srvc__card h4{
   color: #ffa700;
-font-size: 1.8rem;
-font-weight: 600rem;
-margin: 2rem 0;
+  font-size: 1.8rem;
+  font-weight: 600;
+  margin: 2rem 0;
 }
 .srvc .srvc__card p{
   color: #ffffff;
@@ -305,9 +350,9 @@ margin: 2rem 0;
   }
 }
 
- /* LATEST */
+/* LATEST */
 .latest {
-  background: #2b2b2b;
+  background-color: #2b2b2b;
   padding: 5rem 0;
 }
 .latest .latest__wrapper {
@@ -315,21 +360,21 @@ margin: 2rem 0;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 5rem;
 }
-.latest .latest__title h2{
-  color: #ffa700;
+.latest .latest__title h2 {
+  color:#ffa700;
   font-size: 5rem;
   font-weight: 600;
 }
-.latest .latest__title p{
+.latest .latest__title p {
   color: #ffffff;
-  font-size: 2rem;
+  font-size: 2.5rem;
 }
- .latest .latest__title{
-margin-bottom: 8rem;
+.latest .latest__title {
+  margin-bottom: 8rem;
 }
 .latest .latest__card{
-  background: #ffffff;
-  border-radius: 2rem;
+  background-color: #ffffff;
+  border-radius:2rem;
 }
 .latest .latest__text{
   padding: 1.5rem 2rem;
@@ -346,7 +391,7 @@ margin-bottom: 8rem;
   color: #ffa700;
 }
 @media screen and (max-width:500px){
-  .latest .latest__title {
+  .latest .latest__title{
     text-align: center;
   }
   .latest .latest__title h2{
@@ -363,31 +408,35 @@ margin-bottom: 8rem;
     width: 100%;
   }
 }
- /* FREE */
- .free {
-  background: #ffa700;
-  padding: 6rem ;
- }
- .free .free__wrapper {
-text-align: center;
- }
- .free .free__wrapper h3{
-  font-size: 3rem;
-  font-weight: 600;
+
+/* FREE */
+.free {
+  background-color: #ffa700;
+  padding: 5rem 0;
 }
-.free .free__wrapper p{
-  margin-bottom: 4rem;
-  font-size: 2rem;
+.free .free__wrapper {
+   display: grid;
+  text-align: center;
 }
-.free .free__wrapper a{
- background-color:#2b2b2b;
-  display: inline-block;
-  padding:1.5rem;
-  color:#ffffff;
-  border-radius: 5rem;
+.free h3{
+    font-size: 2rem;
+    font-weight: 600;
+}
+.free p{
+  color: #2b2b2b;
+  margin-bottom: 5rem;
+}
+.free a{
   font-size: 1rem;
-  font-weight: 600;
-  max-width: 10rem;
+  color: #ffffff;
+  background-color: #2b2b2b;
+  border-radius: 2rem;
+  padding: 1.5rem 2rem;
+  max-width: 110px;
+  margin: 0 auto;
+}
+.free .free__wrapper a:hover {
+  scale: 1.1;
 }
 
 /* FOOTER SECTIOON*/
@@ -428,8 +477,176 @@ text-align: center;
       padding-top:1.5rem;
     }
   }
-    
   
+
+/* banner5 */
+.banner5{
+  padding-top: 13rem;
+  padding-bottom: 5rem;
+  background: #ffffff;
+}
+.banner5 .banner5__wrapper{
+  display: grid;
+  grid-template-columns:1fr 1fr;
+  align-items: center;
+  gap: 5rem;
+}
+.banner5 .banner5__text h1 {
+  font-size:10rem;
+  font-weight: 800;
+  color: #ffa700;
+  line-height: 1;
+}
+.banner5 .banner5__text p{
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  text-align: justify;
+}
+/* .banner5 .banner5__wrapper ul li a {
+  color: #ffa700;
+  font-size: 2rem; */
+
+  
+  
+
+  
+/* } */
+.banner5 .banner5__wrapper ul li a {
+  color: #ffa700;
+  font-size: 2.5rem;
+}
+.banner5 .banner5__wrapper ul {
+  display: flex;
+  gap: 1.25rem;
+}
+
+.banner5 .banner5__wrapper ul li i {
+  color: #ffa700;
+  font-size: 2.5rem;
+  align-items: center;
+}
+/* .banner5 .banner5__wrapper ul {
+  display: flex;
+  gap: 1.25rem; */
+.banner5 .arrow{
+  color: #ffa700;
+  font-size: 3.5rem;
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+}
+
+  .banner5 .arrow__wrapper ul {
+    gap: 1.25rem;
+  align-items: center;
+
+  }
+  .banner5 .banner5__wrapper ul li a {
+    color: #ffa700;
+    align-items: center;
+    font-size: 2rem;
+  }
+
+
+@media screen and (max-width:500px){
+  .banner5{
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+  .banner5 .banner5__wrapper{
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+  .banner5 .banner5__text {
+    order: 2;
+  }
+  .banner5 .banner5__text h1{
+    font-size: 3rem;
+    text-align: center;
+  }
+  .banner5 .banner5__text a{
+    display: flex;
+    width: fit-content;
+    margin: 0 auto;
+  }
+  .banner5 img{
+    width: 20rem;
+    margin: 0 25%;
+   /* margin:0 auto; */
+  }
+  
+    .banner5 .banner5__wrapper ul li a {
+      color: #ffa700;
+      font-size: 2rem;
+    }
+    .banner5 .arrow{
+      color: #ffa700;
+      font-size: 3.5rem;
+      display: flex;
+      justify-content: center;
+      justify-items: center;
+    }
+  }
+  /* project */
+.project{
+  background: #2b2b2b;
+  padding-top: 4rem;
+  padding-bottom: 10rem;
+}
+  .project .project__wrapper{
+    display:grid;
+  grid-template-columns:1fr 1fr 1fr;
+  gap:5rem;}
+
+.project .project__title h2{
+  color:#ffa700;
+  font-size:5rem;
+  font-weight:800;
+  height: auto;
+}
+.project .project__title p{
+  color:#ffffff;
+  font-size:2.5rem;
+}
+.project .project__title{
+  margin-bottom:8rem;
+}
+.project .project__card{
+  background:#ffffff;
+  border-radius:2rem;
+  margin-bottom: auto;
+}
+.project .project__text{
+  padding:1.5rem 2rem;
+}
+.project .project__text h4{
+  color:#ffa700;
+  font-weight:600;
+}
+.project .project__text p{
+  margin-top:2rem;
+}
+.project .project__text a{
+  color:#ffa700;
+}
+  @media screen and (max-width:500px){
+    .project .project__title {
+      text-align: center;
+    }
+    .project .project__title h2{
+      font-size: 4rem;
+    }
+    .project .project__wrapper{
+      display: grid;
+      grid-template-columns: 1fr;
+    }
+    .project .project__card{
+      margin: 0 2rem;
+    }
+    .project .project__card img{
+      width: 100%;
+  
+    }}
 
 
 
@@ -437,92 +654,13 @@ text-align: center;
 /* REPEATABLE PATTERNS */
 .btn{
   display: inline-block;
-  padding: 1.5rem 2rem;
+  padding:1.5rem 2rem;
   border-radius: 5rem;
-color: #ffffff;
+  color:#ffffff;
 }
-.btn:hover{
+.btn:hover {
   scale: 1.1;
 }
 .btn.bg--primary{
-  background: #ffa700;
-}
-
-/* .about */
-.about{
-  padding-top: 10rem;
-  padding-bottom: 5rem;
-  background: #ffffff;
-}
- .about .about__wrapper{
-  display: flex;
-  flex-direction: row-reverse;
-  align-items:center;
-  gap:5rem;
- }
- .about .about__text h3 {
-  font-size: 3rem;
-  font-weight: bold 800;
-  color:#ffa700;
-  line-height: 1;
-}
-.about .about__text p{
-  margin-bottom: 4rem;
-  text-align: justify;
-}
-/* SECTION3 */
-.aboutme {
-  padding-top: 10rem;
-  padding-bottom: 5rem;
-  background: #ffffff;
-}
-.aboutme .aboutme__wrapper{
-  display: flex;
-flex-direction: reverse;
-  align-items: center;
-  gap: 5rem;
-}
-.aboutme .aboutme__wrapper > :nth-child(1) {
-  order: 2;
-}
-.aboutme .aboutme__wrapper > :nth-child(2) {
-  order: 1;
-}
-.aboutme .aboutme__text h3{
-   font-size: 5rem;
-  font-weight: 700;
-  color: #ffa700;
-  line-height: 1;
-}
-.aboutme .aboutme__text p {
-  margin-top: 5rem;
-  margin-bottom: 3rem;
-  text-align: justify;
-}
-/* Mobileview */
-@media screen and (max-width:500px){
-  .aboutme{
-    padding-left: 2rem;
-    padding-right: 2rem;
-  }
-  .aboutme .aboutme__wrapper {
-    display: grid;
-    grid-template-columns: 1fr;
-  }
-  .aboutme .aboutme__text {
-    order: 2;
-  }
-  .aboutme .aboutme__text h3 {
-    font-size: 3rem;
-    text-align: center;
-  }
-  .aboutme .aboutme__text a {
-    display: flex;
-    width: fit-content;
-    margin: 0% auto;
-  }
-  .aboutme img {
-    width:20rem;
-    margin: 0 auto;
-  }
+  background:#ffa700;
 }
